# CRISPResso

./: CRISPResso.py  CRISPRessoCompare.py  CRISPRessoCount.py  CRISPRessoPooled.py  CRISPRessoPooledWGSCompare.py  CRISPRessoWGS.py  Dockerfile  README.md  README.rst  conda-requirements.txt  conda_environment.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
CRISPResso/: CRISPRessoCORE.py  CRISPRessoCompareCORE.py  CRISPRessoCountCORE.py  CRISPRessoPooledCORE.py  CRISPRessoPooledWGSCompareCORE.py  CRISPRessoWGSCORE.py  __init__.py  plotting.py
tests/: crispresso_tests.py
