[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CRISPResso 1.1"
version = "1.1.0"
authors = [
  { name="Luca Pinello", email="lpinello@jimmy.harvard.edu" },
  { name="Tony Reina", email="tbreina@bu.edu"}
]
description = "Software pipeline for the analysis of CRISPR-Cas9 genome editing outcomes from deep sequencing data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/tonyreina/CRISPResso"
"Bug Tracker" = "https://github.com/tonyreina/CRISPResso/issues"

